--- a/front-end-task/src/App.css
+++ b/front-end-task/src/App.css
@@ -49,3 +49,11 @@ li {
   margin-top: -250px;
   position: fixed;
 }
+.article {
+  background-repeat: no-repeat;
+  background-position: center;
+  place-items: center;
+  display: grid;
+  width: "100%";
+  height: "100%";
+}
