--- a/front-end-task/src/App.css
+++ b/front-end-task/src/App.css
@@ -56,4 +56,14 @@ li {
   display: grid;
   width: "100%";
   height: "100%";
+  border-radius: 25px;
+  border: 2px solid #73ad21;
+  white-space: normal;
+  filter: drop-shadow(30px 10px 4px #4444dd);
+}
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: rotate(-50deg);
 }
